trunk/Archive2/8f/d14e875d6ad98e/output
main.cpp: In function 'int main()':
main.cpp:3:5: error: 'test::test()' is private
     test() {}
     ^
main.cpp:10:19: error: within this context
     test* x = new test;
                   ^
---------
main.cpp: In function 'int main()':
main.cpp:3:5: error: 'test::test()' is private
     test() {}
     ^
main.cpp:8:10: error: within this context
     test x;
          ^
